--- a/webpage/index.html
+++ b/webpage/index.html
@@ -9,7 +9,11 @@
 <body>
     <h2></h2>
     <div id="formularzDiv">
-
+        <p id="welcomeP">Witaj w wieziennej aplikacji. <br>
+            Wybierz co chcesz zrobić. <br> <br>
+            -->  <a href="raporty.html"> Spisy i raporty wiezienne</a> <br>
+            -->  <a href="wpisy.html">Wpis wieznia do wiezienia</a>
+        </p>
     </div>
 </body>
 </html>
