--- a/webpage/raporty.html
+++ b/webpage/raporty.html
@@ -8,10 +8,19 @@
 </head>
 <body>
     <div id="formularzDiv">
+        <ol id="raport">
+
+        </ol>
         <p id="welcomeP">Ponizej znajduja sie dostepne raporty. <br>
-            !! TODO !!
+            <button id="btnAllPrisoners"> Pokaż więźniów! </button>
             
         </p>
     </div>
 </body>
+<script>
+    const btnAllPrisoners = document.getElementById("btnAllPrisoners");
+    btnAllPrisoners.addEventListener("click", async e=>{
+        
+    })
+</script>
 </html>
