--- a/webpage/raporty.html
+++ b/webpage/raporty.html
@@ -16,7 +16,7 @@
             <button id="btnLifeSentencePrisonsers"> Pokaż więźniów z dożywotnim wyrokiem! </button> <br>
             <button id="btnAllEmployees"> Pokaż pracowników! </button> <br>
             <button id="btnPrisonersDeposit"> Pokaż depozyt więźniów! </button> <br>
-            
+            <a href="index.html">--> Powrót</a>
         </p>
     </div>
 </body>
