--- a/webpage/public/wpisy.html
+++ b/webpage/public/wpisy.html
@@ -23,7 +23,7 @@
 
                 <label for="cellno">Numer celi</label> <br>
                 <input type="text" id="cellno" name="cellno"> <br>
-
+                <button id="btnShowCells"> Pokaż dostępne cele </button> <br>
                 <label for="segmentno">Numer segmentu</label> <br>
                 <input type="text" id="segmentno" name="segmentno"> <br>
                 Segment męski - 1 <br>
