updated stuff, cleaned todos

--- a/webpage/public/raporty.html
+++ b/webpage/public/raporty.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="./style/styleRaports.css">
 </head>
 <body>
-    <div id="tableDiv">
+  <div id="tableDiv">
 
-    </div>
+    </div>  
     <div id="formularzDiv">
 
         <p id="welcomeP">Ponizej znajduja sie dostepne raporty. <br>
@@ -17,6 +17,7 @@
             <button id="btnLifeSentencePrisonsers"> Pokaż więźniów z dożywotnim wyrokiem! </button> <br>
             <button id="btnAllEmployees"> Pokaż pracowników! </button> <br>
             <button id="btnPrisonersDeposit"> Pokaż depozyt więźniów! </button> <br>
+            <button id="btnShowCells"> Pokaż wszystkie wolne cele! </button> <br>
             <a href="index.html">POWRÓT</a>
         </p>
     </div>
