--- a/webpage/public/wpisy.html
+++ b/webpage/public/wpisy.html
@@ -12,7 +12,7 @@
     <div id="tableDiv">
 
     </div> 
-    <div id="formularzDiv">
+    <div id="formularzDiv" action="/wpis_wieznia" method="POST">
         <p id="welcomeP">Wypelnij formularz wpisu wieznia.<br> <br>
             <form id="formularz">
                 <label for="fname">Imie:</label><br>
@@ -50,7 +50,7 @@
                <br>
 
                 <br>
-                <button id="btnSubmit" > WPIS </button> <br>
+                <button type="submit" id="btnSubmit" > WPIS </button> <br>
 
                 
             </form> 
@@ -62,9 +62,10 @@
     </div>
 </body>
 <script>
-    const btnSubmit = document.getElementById("btnSubmit")
+   /* const btnSubmit = document.getElementById("btnSubmit")
     btnSubmit.addEventListener("click", async e=> {
                     const jsonRequest = {}
+                    console.log("we are here 1")
                     jsonRequest.fname = document.getElementById("fname").value
                     jsonRequest.lname = document.getElementById("lname").value
                     jsonRequest.peseltext = document.getElementById("peseltext").value
@@ -79,6 +80,6 @@
                     result = await result.json();
                     if (!result.success)  alert("FAILED! ")
 
-     })
+     })*/
 </script>
 </html>
