--- a/webpage/public/index.html
+++ b/webpage/public/index.html
@@ -12,7 +12,10 @@
         <p id="welcomeP">Witaj w wieziennej aplikacji. <br>
             Wybierz co chcesz zrobić. <br> <br>
             -->  <a href="raporty.html"> Spisy i raporty wiezienne</a> <br>
-            -->  <a href="wpisy.html">Wpis wieznia do wiezienia</a>
+            -->  <a href="wpisy.html">Wpis wieznia do wiezienia</a> <br>
+            -->  <a href="wpisPracownika.html">Zatrudnij pracownika</a>
+            -->  <a href="#">Przenieś więźnia do innej celi</a>
+            -->  <a href="#">Dodaj zasob wiezienny</a>
         </p>
     </div>
 </body>
