--- a/webpage/public/raporty.html
+++ b/webpage/public/raporty.html
@@ -16,8 +16,11 @@
             <button id="btnAllPrisoners"> Pokaż więźniów! </button> <br>
             <button id="btnLifeSentencePrisonsers"> Pokaż więźniów z dożywotnim wyrokiem! </button> <br>
             <button id="btnAllEmployees"> Pokaż pracowników! </button> <br>
-            <button id="btnPrisonersDeposit"> Pokaż depozyt więźniów! </button> <br>
+            <button id="btnPrisonersDeposit"> Pokaż depozyt więźniów! </button> <br>           
             <button id="btnShowCells"> Pokaż wszystkie wolne cele! </button> <br>
+            <button id="#"> Pokaż wszystkie pokoje wraz depozytem!</button> <br>
+            <button id="#"> Pokaż pozostały wyrok więźniów </button> <br>
+            <button id="#"> Pokaż więźniów wraz z celami w jakich przebywaja </button> <br>
             <a href="index.html">POWRÓT</a>
         </p>
     </div>
