updated a lot of stuff

--- a/webpage/public/index.html
+++ b/webpage/public/index.html
@@ -13,9 +13,9 @@
             Wybierz co chcesz zrobić. <br> <br>
             -->  <a href="raporty.html"> Spisy i raporty wiezienne</a> <br>
             -->  <a href="wpisy.html">Wpis wieznia do wiezienia</a> <br>
-            -->  <a href="wpisPracownika.html">Zatrudnij pracownika</a>
-            -->  <a href="#">Przenieś więźnia do innej celi</a>
-            -->  <a href="#">Dodaj zasob wiezienny</a>
+            -->  <a href="wpisPracownika.html">Zatrudnij pracownika</a> <br>
+            -->  <a href="#">Przenieś więźnia do innej celi</a> <br>
+            -->  <a href="#">Dodaj zasob wiezienny</a> <br>
         </p>
     </div>
 </body>
