--- a/webpage/public/raporty.html
+++ b/webpage/public/raporty.html
@@ -13,14 +13,17 @@
     <div id="formularzDiv">
 
         <p id="welcomeP">Ponizej znajduja sie dostepne raporty. <br>
-            <button id="btnAllPrisoners"> Pokaż więźniów! </button> <br>
-            <button id="btnLifeSentencePrisonsers"> Pokaż więźniów z dożywotnim wyrokiem! </button> <br>
-            <button id="btnAllEmployees"> Pokaż pracowników! </button> <br>
-            <button id="btnPrisonersDeposit"> Pokaż depozyt więźniów! </button> <br>           
-            <button id="btnShowCells"> Pokaż wszystkie wolne cele! </button> <br>
-            <button id="#"> Pokaż wszystkie pokoje wraz depozytem!</button> <br>
-            <button id="#"> Pokaż pozostały wyrok więźniów </button> <br>
-            <button id="#"> Pokaż więźniów wraz z celami w jakich przebywaja </button> <br>
+            <button id="btnWszyscyWiezniowie"> Pokaż więźniów i ich wyroki </button> <br>
+            <button id="btnCeleWiezniow"> Pokaż więźniów wraz z ich celami </button> <br> 
+            <button id="btnWyrokiWiezniow"> Pokaż pozostały wyrok więźniów </button> <br> 
+            <button id="btnDozywotniWiezniowie"> Pokaż więźniów z dożywotnim wyrokiem! </button> <br>
+            <button id="btnDepozytWiezniow"> Pokaż depozyt więźniów! </button> <br>   
+            <button id="btnPokazCele"> Pokaż wszystkie wolne cele! </button> <br> 
+            <button id="btnPokazPracownikow"> Pokaż pracowników! </button> <br>                
+            <button id="btnWszystkiePokoje"> Pokaż wszystkie pokoje!</button> <br>
+            <button id="btnDepozytPokoje"> Pokaż wszystkie pokoje wraz depozytem!</button> <br> 
+            <button id="btnDepozytWiezienPokoj"> Pokaz gdzie znajduje sie depozyt wieznia</button> <br> 
+            
             <a href="index.html">POWRÓT</a>
         </p>
     </div>
