--- a/webpage/public/wpisy.html
+++ b/webpage/public/wpisy.html
@@ -78,7 +78,7 @@
                         headers: {"content-type": "application/json"}, body: JSON.stringify(jsonRequest) })
                     }
                     catch(e){
-                        console.log("Złapano wyjątek: "+ e)
+                        console.log("Złapano wyjątek i wpisano więźnia: "+ e)
                     }
                 
 
