--- a/webpage/public/index.html
+++ b/webpage/public/index.html
@@ -13,6 +13,7 @@
             Wybierz co chcesz zrobić. <br> <br>
             -->  <a href="raporty.html"> Spisy i raporty wiezienne</a> <br>
             -->  <a href="wpisy.html">Wpis wieznia do wiezienia</a> <br>
+            -->  <a href="wypiszWieznia.html">Wypis wieznia z wiezienia</a> <br>
             -->  <a href="wpisPracownika.html">Zatrudnij pracownika</a> <br>
             -->  <a href="#">Przenieś więźnia do innej celi</a> <br>
             -->  <a href="#">Dodaj zasob wiezienny</a> <br>
