--- a/webpage/public/wpisy.html
+++ b/webpage/public/wpisy.html
@@ -7,10 +7,6 @@
     <link rel="stylesheet" href="./style/styles.css">
 </head>
 <body>
-    <h2></h2>
-    <div id="tableDiv">
-
-    </div> 
     <div id="formularzDiv">
         <p id="welcomeP">Wypelnij formularz wpisu wieznia.<br> <br>
             <form id="formularz">
@@ -74,23 +70,14 @@
                     jsonRequest.koniecwyroku = document.getElementById("koniecwyroku").value
                     jsonRequest.depozyttext = document.getElementById("depozyttext").value
                     jsonRequest.depozytilosc = document.getElementById("depozytilosc").value
-                    const jr = JSON.stringify(jsonRequest)
-
                     try{
-                        if(jr.imie == "Prison" && jr.nazwisko =="Mike"){
-                            var image= document.createElement("img");
-                            image.src = "./images/prisonmike.jpg";
-                            var src = document.getElementById("tableDiv");
-                            src.appendChild(image);
-                            throw "PRISON MIKE";
-                        }
                         await fetch("http://localhost:8080/wpis_wieznia", {method: "POST", 
-                        headers: {"content-type": "application/json"}, body: jr })
+                        headers: {"content-type": "application/json"}, body: JSON.stringify(jsonRequest) })
                     }
                     catch(e){
                         console.log("Złapano wyjątek i wpisano więźnia: "+ e)
                     }
-                
+                    
 
      })
 </script>
