--- a/webpage/public/index.html
+++ b/webpage/public/index.html
@@ -15,8 +15,7 @@
             -->  <a href="wpisy.html">Wpis wieznia do wiezienia</a> <br>
             -->  <a href="wypiszWieznia.html">Wypis wieznia z wiezienia</a> <br>
             -->  <a href="wpisPracownika.html">Zatrudnij pracownika</a> <br>
-            -->  <a href="#">Przenieś więźnia do innej celi</a> <br>
-            -->  <a href="#">Dodaj zasob wiezienny</a> <br>
+            -->  <a href="przeniesWieznia.html">Przenieś więźnia do innej celi</a> <br>
         </p>
     </div>
 </body>
